# claymore

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  project_info.in  setup_cpp.cmake  setup_cuda.cmake  setup_externallibs.cmake
CMake-Utils/: setup_cpp.cmake  setup_cuda.cmake  setup_externallibs.cmake  setup_python.cmake
Projects/: CMakeLists.txt
Projects/GMPM/: CMakeLists.txt  constitutive_models.cuh  gmpm.cu  gmpm_simulator.cuh  grid_buffer.cuh  hash_table.cuh  mgmpm_kernels.cuh  mgsp_benchmark.cuh  particle_buffer.cuh  partition_domain.h  scene.json  settings.h  utility_funcs.hpp
Projects/GMPM/scenes/: scene.json
Projects/MGSP/: CMakeLists.txt  boundary_condition.cuh  grid_buffer.cuh  halo_buffer.cuh  halo_kernels.cuh  hash_table.cuh  mgmpm_kernels.cuh  mgsp.cu  mgsp_benchmark.cuh  particle_buffer.cuh  partition_domain.h  settings.h  utility_funcs.hpp
Projects/TaichiScripts/: gmpm.py
docs/: benchmark.rst  compilation.rst  conf.py  credits.rst  datastructure.rst  index.rst  multigmpm.rst  overview.rst  paper.bib  philosophy.rst  pipeline.rst  sparsity.rst  structural.rst  system.rst  usage.rst
